changed to work account and corrected passwordeval value

--- a/.msmtprc
+++ b/.msmtprc
@@ -6,10 +6,22 @@ tls            on
 tls_trust_file /Users/tminor/Misc/certs/ca-bundle.crt
 logfile        ~/.msmtp.log
 
-# Gmail
-account        gmail
+# Work
+account        work
 host           smtp.gmail.com
 port           587
-from           minort@gmail.com
-user           minort
-passwordeval   "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwd/minort.gpg"
+from           thomas.minor@usg.edu
+user           thomas.minor@usg.edu
+passwordeval   echo $(gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwd/work.gpg)
+
+account default : work
+
+## Gmail
+#account        gmail
+#host           smtp.gmail.com
+#port           587
+#from           minort@gmail.com
+#user           minort
+#passwordeval   "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwd/minort.gpg"
+#
+#account default : gmail
