--- a/.notmuch-config
+++ b/.notmuch-config
@@ -10,6 +10,7 @@
 # Notmuch will store its database within a sub-directory of the path
 # configured here named ".notmuch".
 #
+
 [database]
 path=/Users/tminor/.mail
 
@@ -28,9 +29,10 @@ path=/Users/tminor/.mail
 # recipient list of replies, and will set the From address based on the
 # address to which the original email was addressed.
 #
+
 [user]
 name=Thomas Minor
-primary_email=minort@gmail.com
+primary_email=thomas.minor@usg.edu
 
 # Configuration for "notmuch new"
 #
@@ -46,9 +48,10 @@ primary_email=minort@gmail.com
 #		names will be ignored, independent of its depth/location
 #		in the mail store.
 #
+
 [new]
 tags=new
-ignore=
+ignore=.mbsyncstate;.isyncuidmap.db;.uidvalidity
 
 # Search configuration
 #
@@ -59,6 +62,7 @@ ignore=
 #		search results by default.  Using an excluded tag in a
 #		query will override that exclusion.
 #
+
 [search]
 exclude_tags=deleted;spam;
 
@@ -83,5 +87,6 @@ exclude_tags=deleted;spam;
 #	and update tags, while the "notmuch tag" and "notmuch restore"
 #	commands will notice tag changes and update flags in filenames
 #
+
 [maildir]
 synchronize_flags=true
