--- a/.msmtprc
+++ b/.msmtprc
@@ -1,27 +1,17 @@
 # default values for all accounts
 defaults
-auth on
+auth plain
 port 587
-tls            on
-tls_trust_file /Users/tminor/Misc/certs/ca-bundle.crt
+tls            off
+tls_trust_file /etc/ssl/certs/ca-bundle.crt
 logfile        ~/.msmtp.log
 
 # Work
 account        work
-host           smtp.gmail.com
-port           587
-from           thomas.minor@usg.edu
-user           thomas.minor@usg.edu
-passwordeval   echo $(gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwd/work.gpg)
+host           localhost
+port           1025
+from           me@example.com
+user           me@example.com
+passwordeval   echo foo
 
 account default : work
-
-## Gmail
-#account        gmail
-#host           smtp.gmail.com
-#port           587
-#from           minort@gmail.com
-#user           minort
-#passwordeval   "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwd/minort.gpg"
-#
-#account default : gmail
