--- a/.notmuch-config
+++ b/.notmuch-config
@@ -12,7 +12,7 @@
 #
 
 [database]
-path=/Users/tminor/.mail
+path=/home/me/.mail
 
 # User configuration
 #
@@ -31,8 +31,8 @@ path=/Users/tminor/.mail
 #
 
 [user]
-name=Thomas Minor
-primary_email=thomas.minor@usg.edu
+name=John Doe
+primary_email=me@example.com
 
 # Configuration for "notmuch new"
 #
